# pythonCppInterface

./: CMakeLists.txt  LICENSE  README.md
scripts/plugins/: file.py  maths.py
src/: main.cpp  py.cpp  py.h  py2cEx.cpp  py2cEx.h
